# api-airforce-modbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  config.example.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
bot/: Cargo.toml
bot/src/: ai.rs  commands.rs  config.rs  dashboard.rs  handler.rs  invite_filter.rs  jail.rs  main.rs  store.rs
bot/src/web/: app.js  index.html  style.css
core/: Cargo.toml
core/src/: ai_mod.rs  antinuke.rs  automod.rs  bulk_delete.rs  cases.rs  flood_filter.rs  jail.rs  lib.rs  link_filter.rs  ports.rs  raid.rs
docs/plans/: 00-multi-guild-foundation.md  01-mod-action-suite.md  02-content-automod.md  03-join-raid-anti-nuke.md  04-persistence-hardening.md  05-ai-moderation-airforce.md  06-web-dashboard.md  90-backlog-community.md
