[package]
name = "airforce-modbot"
description = "Self-hostable Discord moderation bot: anti-advertising link filter, escape-proof role-snapshot jail, and strikes. Backs the api.airforce community."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "airforce-modbot"

[dependencies]
airforce-modbot-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
redb = "2"
toml = "0.8"
serenity = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
chrono = "0.4"
# Only used to peek at a dsc.gg vanity's redirect target (Location header) when
# resolving invite shorteners; shares serenity's rustls TLS backend.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
