[package]
name = "airforce-modbot"
description = "Self-hostable Discord moderation bot: anti-advertising link filter, escape-proof role-snapshot jail, and strikes. Backs the api.airforce community."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "airforce-modbot"

[dependencies]
airforce-modbot-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
redb = "2"
toml = "0.8"
serenity = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "net"] }
chrono = "0.4"
# Optional web dashboard (off unless [dashboard] is configured): a small axum
# service in the bot process, sharing the same redb store as the gateway.
axum = "0.7"
rand = "0.9"
# Resolves dsc.gg vanity redirects (Location header) and backs the AI-moderation
# classifier call (JSON chat/completions); shares serenity's rustls TLS backend.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
