[package]
name = "airforce-modbot-core"
description = "Platform-agnostic core for the api.airforce Discord moderation bot: anti-advertising link filter, escape-proof jail, and strikes. Storage/config are abstracted behind ports so any backend can drive it."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
once_cell.workspace = true
